--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,7 @@ p {
 .float-left {
     float: left;
     margin-right: 25px;
+    position: relative;
 }
 
 .float-right {
@@ -111,7 +112,7 @@ p {
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
-    color: #ffffff;
+    color: #ffffff
 }
 /* Consolidated .search-engine-optimization, .online-reputation-management, .social-media-marketing*/
 
