--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,8 @@ a {
 
 p {
     font-size: 16px;
+    position: sticky;
+    
 }
 
 .hero {
@@ -62,7 +64,6 @@ p {
 .float-left {
     float: left;
     margin-right: 25px;
-    position: relative;
 }
 
 .float-right {
@@ -112,7 +113,7 @@ p {
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
-    color: #ffffff
+    color: #ffffff;
 }
 /* Consolidated .search-engine-optimization, .online-reputation-management, .social-media-marketing*/
 
